--- a/src/globals.css
+++ b/src/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap');
 
 /* ------------------- */
 /* Globals             */
@@ -36,6 +36,12 @@ h3 {
   font-weight: 800;
   font-size: 24px;
   line-height: 25px;
+  letter-spacing: 0;
+}
+h4 {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 20px;
   letter-spacing: 0;
 }
 
